fix(api): recent api calls to have appId as params instead of tenantId in headers
